--- a/Star_dataset.ipynb
+++ b/Star_dataset.ipynb
@@ -12,7 +12,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-        "from imblearn.over_sampling import RandomOverSampler\n"
+        "from imblearn.over_sampling import RandomOverSampler"
       ]
     },
     {
@@ -380,24 +380,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "unn0Zz_gVKVm"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "26\n",
-            "26\n",
-            "26\n",
-            "26\n",
-            "26\n",
-            "26\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from pandas import DataFrame\n",
         "\n",
@@ -432,10 +419,24 @@
         "train, X_train, y_train = preprocess(train)\n",
         "valid, X_valid, y_valid = preprocess(train)\n",
         "test, X_test, y_test = preprocess(train)\n",
-        "\n",
         "# for i in range(6):\n",
         "#     print(sum(y_train == i))"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# KNN"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -456,7 +457,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.11.3"
     }
   },
   "nbformat": 4,
