--- a/Star_dataset.ipynb
+++ b/Star_dataset.ipynb
@@ -612,6 +612,20 @@
         "y_pred = knn_model.predict(X_test)\n",
         "print(classification_report(y_test, y_pred))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Logistic Regression (Multinomial)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
